# operation-dashboard-ui

./: .gitmodules  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
crates/crates/: generate_specs.sh  index.html  tailwind.config.ts  test_proto_compilation.sh
crates/crates/SPECS/: 01-op-agents.md  02-op-blockchain.md  03-op-cache.md  04-op-chat.md  05-op-cognitive-mcp.md  06-op-core.md  07-op-dbus-mirror.md  08-op-dbus-model.md  09-op-deployment.md  10-op-dynamic-loader.md  11-op-execution-tracker.md  12-op-gateway.md  13-op-grpc-bridge.md  14-op-http.md  15-op-identity.md  16-op-inspector.md  17-op-introspection.md  18-op-jsonrpc.md  19-op-llm.md  20-op-mcp-aggregator.md  21-op-mcp-proxy.md  22-op-mcp.md  23-op-ml.md  24-op-network.md  25-op-plugins.md  26-op-services.md  27-op-state-store.md  28-op-state.md  29-op-tools.md  30-op-web.md  31-op-workflows.md  GRPC-IMPLEMENTATION-STATUS.md  GRPC-IMPLEMENTATION-SUMMARY.md  GRPC-PROTOBUF-ANALYSIS.md  INDEX.md  README.md  SCHEMA-SYSTEM-ANALYSIS.md
crates/crates/op-agents/: Cargo.toml  SPEC.md
crates/crates/op-blockchain/: Cargo.toml  SPEC.md
crates/crates/op-cache/: Cargo.toml  SPEC.md  build.rs
crates/crates/op-cache/proto/: op_cache.proto
crates/crates/op-cache/src/: agent_registry.rs  btrfs_cache.rs  capability_resolver.rs  lib.rs  orchestrator.rs  pattern_tracker.rs  workflow_cache.rs  workflow_executor.rs  workflow_tracker.rs  workstack_cache.rs
crates/crates/op-cache/src/grpc/: agent_service.rs  cache_service.rs  orchestrator_service.rs  server.rs
crates/crates/op-chat/: Cargo.toml  DESIGN.md  SPEC.md  build.rs
crates/crates/op-cognitive-mcp/: Cargo.toml  SPEC.md
crates/crates/op-cognitive-mcp/src/: activity_filter.rs  cognitive_tools.rs  lib.rs  main.rs  memory_store.rs  server.rs
crates/crates/op-core/: Cargo.toml  SPEC.md
crates/crates/op-core/src/: config.rs  error.rs  execution.rs  lib.rs  message.rs  security.rs  self_identity.rs  types.rs
crates/crates/op-dbus-mirror/: Cargo.toml  SPEC.md
crates/crates/op-dbus-mirror/src/: dbus_interface.rs  jsonrpc_interface.rs  lib.rs  lib.rs.orig  object.rs  tree.rs
crates/crates/op-dbus-model/: Cargo.toml  SPEC.md
crates/crates/op-dbus-model/src/: lib.rs  models.rs
crates/crates/op-deployment/: Cargo.toml  SPEC.md
crates/crates/op-execution-tracker/: Cargo.toml  SPEC.md
crates/crates/op-execution-tracker/src/: execution_context.rs  execution_tracker.rs  lib.rs  metrics.rs  record.rs
crates/crates/op-gateway/: Cargo.toml  SECURITY-MODEL.md  SPEC.md
crates/crates/op-gateway/src/: encrypted_storage.rs  error.rs  lib.rs  mcp_gateway.rs  wireguard_auth.rs
crates/crates/op-grpc-bridge/: Cargo.toml  SPEC.md  build.rs
crates/crates/op-grpc-bridge/proto/: mail.proto  operation.proto  operation.proto.bak  privacy_network.proto  registration.proto  registry.proto
crates/crates/op-grpc-bridge/src/: dbus_watcher.rs  grpc_client.rs  grpc_server.rs  lib.rs  proto_gen.rs  sync_engine.rs
crates/crates/op-http/: SPEC.md  (+1 more)
crates/crates/op-identity/: Cargo.toml  SPEC.md
crates/crates/op-identity/src/: gcloud_auth.rs  lib.rs  registration.rs  session.rs  token.rs  wg.rs  wireguard.rs
crates/crates/op-introspection/: Cargo.toml  SPEC.md
crates/crates/op-introspection/src/: hierarchical.rs  lib.rs  projection.rs  scanner.rs
crates/crates/op-mcp/: Cargo.toml  SPEC.md  build.rs
crates/crates/op-mcp-proxy/: Cargo.toml  SPEC.md
crates/crates/op-mcp-proxy/src/: cloudaicompanion.rs  direct_llm.rs  gcloud_auth.rs  main.rs  session.rs
crates/crates/op-mcp/proto/: mcp.proto
crates/crates/op-mcp/src/: agents_main.rs  agents_server.rs  builtin_trait_agents.rs  compact.rs  compact_main.rs  external_client.rs  http_server.rs  lib.rs  main.rs  protocol.rs  request_context.rs  request_handler.rs  resources.rs  router.rs  server.rs  sse.rs  tool_adapter.rs  tool_adapter_orchestrated.rs  tool_registry.rs  trait_agent_executor.rs
crates/crates/op-mcp/src/grpc/: client.rs  mod.rs  server.rs  service.rs
crates/crates/op-mcp/src/tools/: filesystem.rs  mod.rs  ovs.rs  plugin.rs  qdrant.rs  response.rs  shell.rs  system.rs  systemd.rs
crates/crates/op-mcp/src/transport/: http.rs  mod.rs  stdio.rs  websocket.rs
crates/crates/op-services/: Cargo.toml  SPEC.md
crates/crates/op-services/proto/: services.proto
crates/crates/op-services/src/: lib.rs
crates/crates/op-services/src/dbus/: interface.rs  mod.rs
crates/crates/op-services/src/grpc/: mod.rs  server.rs
crates/crates/op-services/src/manager/: dinit_proxy.rs  mod.rs  process.rs  service_manager.rs
crates/crates/op-services/src/schema/: mod.rs
crates/crates/op-services/src/store/: mod.rs
crates/crates/op-state/: Cargo.toml  SPEC.md
crates/crates/op-state-store/: Cargo.toml  SPEC.md
crates/crates/op-state-store/src/: ad_full_schema.sql  cms_drupal_schema.sql  cms_wordpress_schema.sql  disaster_recovery.rs  error.rs  event_chain.rs  execution_job.rs  lib.rs  metrics.rs  namespace_schema.sql  plugin_schema.rs  redis_stream.rs  schema_validator.rs  sqlite_store.rs  state_store.rs
crates/crates/op-state/src/: crypto.rs  dbus_plugin_base.rs  dbus_server.rs  lib.rs  manager.rs  plugin.rs  plugin_workflow.rs  plugtree.rs  schema_validator.rs
crates/crates/op-workflows/: Cargo.toml  SPEC.md
crates/crates/op-workflows/src/: context.rs  engine.rs  flow.rs  history.rs  lib.rs  node.rs  orchestrator.rs  workflows.rs
crates/crates/op-workflows/src/builtin/: dbus_node.rs  definitions.rs  mod.rs  plugin_node.rs  tool_node.rs
docs/: architecture-flow.md
src/: App.tsx  index.css
src/grpc/: client.ts  index.ts
src/hooks/: use-event-stream.ts
src/pages/: AccountabilityPage.tsx  AgentsPage.tsx  BtrfsPage.tsx  ChatPage.tsx  ConfigPage.tsx  ContainersPage.tsx  GrpcDiagnosticsPage.tsx  InspectorPage.tsx  LlmPage.tsx  LogsPage.tsx  OpenFlowPage.tsx  OpenSwitchPage.tsx  OrchestrationPage.tsx  OverviewPage.tsx  PrivacyNetworkPage.tsx  RoutableModelsPage.tsx  SecurityPage.tsx  ServicesPage.tsx  SkillsPage.tsx  StatePage.tsx  ToolsPage.tsx
src/types/: api.ts
(+394 files in other folders)
