[package]
name = "op-cache"
version = "0.1.0"
edition = "2021"
description = "BTRFS-based caching with NUMA awareness and gRPC services"
license = "MIT"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
futures = { workspace = true }
log = "0.4"
num_cpus = "1.16"
prost = { workspace = true }
prost-types = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
simd-json = { workspace = true }
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = { workspace = true }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
zstd = "0.13"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
