[package]
name = "op-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core types and utilities for op-dbus-v2"

[dependencies]
serde = { workspace = true }
simd-json = { version = "0.13", features = ["serde", "serde_impl"] }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
op-execution-tracker = { path = "../op-execution-tracker" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
