[package]
name = "op-dbus-mirror"
version = "1.0.0"
edition = "2021"
description = "1:1 D-Bus projection of internal databases (OVSDB, NonNet)"

[dependencies]
op-core = { path = "../op-core" }
op-jsonrpc = { path = "../op-jsonrpc" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
zbus = { version = "4.0", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
simd-json = { version = "0.13", features = ["serde"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
