[package]
name = "op-dbus-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
simd-json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
op-core = { path = "../op-core" }
