[package]
name = "op-execution-tracker"
version = "0.1.0"
edition = "2021"
description = "MCP Execution Tracking Layer - Lightweight execution monitoring that complements existing state management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
simd-json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
sha2 = { workspace = true }
hex = "0.4"
prometheus = { workspace = true }
