[package]
name = "op-gateway"
version = "0.1.0"
edition = "2021"
description = "MCP Gateway with WireGuard authentication and smart routing"

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
simd-json = "0.13"

# Crypto
ring = "0.17"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
blake2 = "0.10"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
base64 = "0.22"
hex = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
