[package]
name = "op-grpc-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Bidirectional D-Bus <-> gRPC bridge with event chain integration"

[dependencies]
# gRPC
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# D-Bus
zbus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }

# Internal crates
op-state-store = { path = "../op-state-store" }
op-identity = { path = "../op-identity" }
op-network = { path = "../op-network" }

# Utilities
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = "0.3"
async-stream = "0.3"
base64 = "0.21"

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
