[package]
name = "op-mcp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
op-cache = { path = "../op-cache" }
op-identity = { path = "../op-identity" }
tokio     = { version = "1", features = ["full"] }
tonic     = "0.12"
serde     = { version = "1", features = ["derive"] }
simd-json = { workspace = true }
reqwest   = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing   = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
anyhow    = "1"
dirs      = "5"
hostname  = "0.4"
rusqlite  = { workspace = true, features = ["bundled"] }
chrono    = { version = "0.4", features = ["serde"] }
uuid      = { version = "1.6", features = ["v4", "serde"] }
