[package]
name = "op-mcp"
version = "0.4.0"
edition = "2021"
description = "Unified MCP Protocol Server with multiple transport and mode support"

[features]
default = ["grpc"]
grpc = ["tonic", "prost", "tonic-build"]

[dependencies]
# Core
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
simd-json = { workspace = true }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
prost-types = { workspace = true }

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest.workspace = true

# D-Bus (for agent executor)
zbus = "4.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# gRPC (optional)
tonic = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# Internal crates
op-core = { path = "../op-core" }
op-tools = { path = "../op-tools" }
op-plugins = { path = "../op-plugins" }
op-introspection = { path = "../op-introspection" }
op-state = { path = "../op-state" }
op-state-store = { path = "../op-state-store" }

[build-dependencies]
tonic-build = { workspace = true, optional = true }

[[bin]]
name = "op-mcp-server"
path = "src/main.rs"

[[bin]]
name = "op-mcp-compact"
path = "src/compact_main.rs"

[[bin]]
name = "op-mcp-agents"
path = "src/agents_main.rs"
