[package]
name = "op-services"
version = "0.1.0"
edition = "2021"
description = "System-wide service manager - systemd replacement with dinit backend"

[[bin]]
name = "op-services"
path = "src/bin/op-services.rs"

[[bin]]
name = "systemctl"
path = "src/bin/systemctl.rs"

[[bin]]
name = "systemctl-native"
path = "src/bin/systemctl-native.rs"

[dependencies]
# Schema source of truth
op-plugins = { path = "../op-plugins" }

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# D-Bus
zbus = { version = "4.0", features = ["tokio"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async
tokio = { version = "1", features = ["full", "signal"] }
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
simd-json = "0.13"
serde_json = "1"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
toml = "0.8"

[build-dependencies]
tonic-build = "0.12"
