[package]
name = "op-state"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "State management system with plugin infrastructure, crypto, and schema validation"

[dependencies]
op-core = { path = "../op-core" }
op-blockchain = { path = "../op-blockchain" }
op-jsonrpc = { path = "../op-jsonrpc" }
op-state-store = { path = "../op-state-store" }
op-network = { path = "../op-network" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
simd-json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
zbus = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
quick-xml = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
log = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
md5 = "0.7"
serde_json = { workspace = true }
pocketflow_rs = "0.1"

[features]
default = []
mcp = []
